bug-fix/side-nav-icon
Side navigation icons were not aligned centred.

--- a/UI/Web/src/app/sidenav/side-nav-item/side-nav-item.component.scss
+++ b/UI/Web/src/app/sidenav/side-nav-item/side-nav-item.component.scss
@@ -1,3 +1,8 @@
+.side-nav-icon {
+    padding: 0 !important;
+    justify-content: center !important;
+}
+
 .side-nav-item {
     position: relative;
     align-items: center;
@@ -17,10 +22,9 @@
 
         div {
             min-width: 102px;
-            width: 100%
+            width: 100%;
         }
     }
-
 
     span {
         &:last-child {
@@ -36,7 +40,7 @@
             min-width: 30px;
             width: 100%;
             padding-left: 5px;
-    
+
             i {
                 font-size: 18px;
             }
@@ -49,7 +53,7 @@
         }
 
         .card-actions {
-           opacity: 0;
+            opacity: 0;
         }
 
         &.active {
@@ -80,8 +84,8 @@
             left: 0;
         }
 
-        .side-nav-text, i {
-
+        .side-nav-text,
+        i {
             color: var(--side-nav-item-active-text-color) !important;
         }
 
@@ -94,10 +98,8 @@
                 color: var(--side-nav-hover-text-color) !important;
             }
         }
-        
     }
 }
-
 
 a {
     text-decoration: none;
@@ -113,35 +115,34 @@ a {
         //width: 100%;
         height: 70px;
         //min-height: 40px;
-       // overflow: hidden;
+        // overflow: hidden;
         font-size: 1rem;
-    
+
         //cursor: pointer;
-    
+
         .side-nav-text {
             // padding-left: 10px;
             // opacity: 1;
             // min-width: 100px;
             width: 100%;
-    
+
             // div {
             //     min-width: 102px;
             //     width: 100%
             // }
         }
 
-    
         &.closed {
             // .side-nav-text {
             //     opacity: 0;
             // }
-    
+
             .card-actions {
-               //opacity: 0;
-               font-size: inherit;
+                //opacity: 0;
+                font-size: inherit;
             }
         }
-    
+
         // span {
         //     &:last-child {
         //         flex-grow: 1;
