--- a/UI/Web/src/app/sidenav/side-nav/side-nav.component.scss
+++ b/UI/Web/src/app/sidenav/side-nav/side-nav.component.scss
@@ -34,11 +34,6 @@
     }
 }
 
-.side-nav-icon {
-    padding: 0;
-    justify-content: center;
-}
-
 @media (max-width: 576px) {
     .side-nav {
         padding: 10px 0;
